# goat-code

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dist-workspace.toml  install.sh  release.toml
.github/workflows/: ci.yml  release.yml
crates/goat-agent/: AGENTS.md  Cargo.toml
crates/goat-agent/src/: accounts.rs  agent.rs  ask.rs  compaction.rs  conversation.rs  delegate.rs  instructions.rs  lib.rs  persist.rs  plan.rs  process.rs  process_tools.rs  prompt.rs  rate_limit_cache.rs  retry.rs  rounds.rs  shell.rs  threads.rs  tool_recovery.rs  tools_exec.rs  turn.rs  websearch.rs
crates/goat-auth/: Cargo.toml
crates/goat-auth/src/: lib.rs
crates/goat-client/: Cargo.toml
crates/goat-client/src/: idmap.rs  lib.rs
crates/goat-code/: Cargo.toml
crates/goat-code/src/: auth.rs  cli.rs  cli_ui.rs  headless.rs  logging.rs  main.rs  provider_table.rs  search.rs  style.rs  theme.rs  update.rs  worktree.rs
crates/goat-command/: Cargo.toml
crates/goat-command-app/: Cargo.toml
crates/goat-command-app/src/: exit.rs  lib.rs
crates/goat-command-conversation/: Cargo.toml
crates/goat-command-conversation/src/: clear.rs  compact.rs  lib.rs  rename.rs  resume.rs
crates/goat-command-help/: Cargo.toml
crates/goat-command-help/src/: help.rs  lib.rs
crates/goat-command-settings/: Cargo.toml
crates/goat-command-settings/src/: config.rs  effort.rs  lib.rs  model.rs  plan.rs  provider.rs  search.rs  usage.rs
crates/goat-command/src/: command.rs  effect.rs  lib.rs  parse.rs  spec.rs
crates/goat-commands/: Cargo.toml
crates/goat-commands/src/: lib.rs
crates/goat-config/: Cargo.toml
crates/goat-config/src/: lib.rs
crates/goat-core/: Cargo.toml
crates/goat-core/src/: engine.rs  lib.rs  stub.rs
crates/goat-daemon/: Cargo.toml
crates/goat-daemon/src/: conn.rs  lib.rs  manager.rs  remote.rs  session.rs
crates/goat-daemon/tests/: remote_e2e.rs  roundtrip.rs
crates/goat-github/: Cargo.toml
crates/goat-github/src/: lib.rs
crates/goat-mcp/: Cargo.toml
crates/goat-mcp/src/: convert.rs  lib.rs  names.rs
crates/goat-protocol/: Cargo.toml
crates/goat-protocol/src/: event.rs  lib.rs  op.rs  types.rs
crates/goat-provider/: Cargo.toml
crates/goat-provider-anthropic/: Cargo.toml
crates/goat-provider-anthropic/src/: auth.rs  error.rs  lib.rs
crates/goat-provider-deepseek/: Cargo.toml
crates/goat-provider-deepseek/src/: lib.rs
crates/goat-provider-gemini/: Cargo.toml
crates/goat-provider-gemini/src/: codeassist.rs  error.rs  lib.rs  oauth.rs  wire.rs
crates/goat-provider-groq/: Cargo.toml
crates/goat-provider-groq/src/: lib.rs
crates/goat-provider-hosted/: Cargo.toml
crates/goat-provider-hosted/src/: lib.rs
crates/goat-provider-kimi/: Cargo.toml
crates/goat-provider-kimi-code/: Cargo.toml
crates/goat-provider-kimi-code/src/: lib.rs  oauth.rs
crates/goat-provider-kimi/src/: lib.rs
crates/goat-provider-llama-cpp/: Cargo.toml
crates/goat-provider-llama-cpp/src/: lib.rs
crates/goat-provider-lmstudio/: Cargo.toml
crates/goat-provider-lmstudio/src/: lib.rs
crates/goat-provider-local/: Cargo.toml
crates/goat-provider-local/src/: lib.rs
crates/goat-provider-mistral/: Cargo.toml
crates/goat-provider-mistral/src/: lib.rs
crates/goat-provider-ollama/: Cargo.toml
crates/goat-provider-ollama/src/: lib.rs
crates/goat-provider-openai/: Cargo.toml
crates/goat-provider-openai-codex/: Cargo.toml
crates/goat-provider-openai-codex/src/: lib.rs
crates/goat-provider-openai-compat/: Cargo.toml
crates/goat-provider-openai-compat/src/: chat.rs  common.rs  headers.rs  hosted.rs  lib.rs  responses.rs  vision.rs
crates/goat-provider-openai/src/: lib.rs
crates/goat-provider-openrouter/: Cargo.toml
crates/goat-provider-openrouter/src/: lib.rs
crates/goat-provider-qwen/: Cargo.toml
crates/goat-provider-qwen/src/: lib.rs
crates/goat-provider-responses/: Cargo.toml
crates/goat-provider-responses/src/: lib.rs
crates/goat-provider-xai/: Cargo.toml
crates/goat-provider-xai/src/: lib.rs  oauth.rs
crates/goat-provider-zai/: Cargo.toml
crates/goat-provider-zai-coding/: Cargo.toml
crates/goat-provider-zai-coding/src/: lib.rs
crates/goat-provider-zai/src/: lib.rs
crates/goat-provider/src/: lib.rs
crates/goat-providers/: Cargo.toml
crates/goat-providers/src/: lib.rs
crates/goat-remote/: Cargo.toml
crates/goat-remote/src/: ca.rs  devices.rs  lib.rs  pairing.rs  server.rs  verify.rs
crates/goat-remote/tests/: remote.rs
crates/goat-sandbox/: Cargo.toml
crates/goat-sandbox/src/: lib.rs
crates/goat-search-provider/: Cargo.toml
crates/goat-search-provider-brave/: Cargo.toml
crates/goat-search-provider-brave/src/: lib.rs
crates/goat-search-provider-duckduckgo/: Cargo.toml
crates/goat-search-provider-duckduckgo/src/: lib.rs
crates/goat-search-provider-searxng/: Cargo.toml
crates/goat-search-provider-searxng/src/: lib.rs
crates/goat-search-provider-tavily/: Cargo.toml
crates/goat-search-provider-tavily/src/: lib.rs
crates/goat-search-provider/src/: lib.rs
crates/goat-search-providers/: Cargo.toml
crates/goat-search-providers/src/: lib.rs
crates/goat-skill/: Cargo.toml
crates/goat-skill/src/: lib.rs
crates/goat-store/: Cargo.toml
crates/goat-store/src/: lib.rs  models.rs  schema.rs
crates/goat-tool/: Cargo.toml
crates/goat-tool-browser/: Cargo.toml
crates/goat-tool-browser/src/: action.rs  dialog.rs  error.rs  lib.rs  navigation.rs  observe.rs  resilience.rs  session.rs  snapshot.rs  tool.rs
crates/goat-tool-browser/tests/: chrome.rs
crates/goat-tool-computer/: Cargo.toml
crates/goat-tool-computer/src/: action.rs  backend.rs  error.rs  lib.rs  tool.rs
crates/goat-tool-fs/: Cargo.toml
crates/goat-tool-fs/src/: lib.rs
crates/goat-tool-search/: Cargo.toml
crates/goat-tool-search/src/: glob.rs  (+4 more)
crates/goat-tool-shell/: Cargo.toml
crates/goat-tool-skill/: Cargo.toml
crates/goat-tool-web/: Cargo.toml
crates/goat-tools/: Cargo.toml
crates/goat-tui/: Cargo.toml
crates/goat-update/: Cargo.toml
crates/goat-wire/: Cargo.toml
crates/goat-worktree/: Cargo.toml
(+86 files in other folders)
