[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbj338033/goat-code"
authors = ["jbj338033"]

[workspace.dependencies]
goat-protocol = { path = "crates/goat-protocol" }
goat-config = { path = "crates/goat-config" }
goat-core = { path = "crates/goat-core" }
goat-tui = { path = "crates/goat-tui" }
goat-provider = { path = "crates/goat-provider" }
goat-auth = { path = "crates/goat-auth" }
goat-store = { path = "crates/goat-store" }
goat-provider-openai-compat = { path = "crates/goat-provider-openai-compat" }
goat-provider-openai = { path = "crates/goat-provider-openai" }
goat-provider-openai-codex = { path = "crates/goat-provider-openai-codex" }
goat-provider-anthropic = { path = "crates/goat-provider-anthropic" }
goat-provider-gemini = { path = "crates/goat-provider-gemini" }
goat-provider-local = { path = "crates/goat-provider-local" }
goat-providers = { path = "crates/goat-providers" }
goat-agent = { path = "crates/goat-agent" }
goat-tool = { path = "crates/goat-tool" }
goat-tool-fs = { path = "crates/goat-tool-fs" }
goat-tool-shell = { path = "crates/goat-tool-shell" }
goat-tool-search = { path = "crates/goat-tool-search" }
goat-tool-skill = { path = "crates/goat-tool-skill" }
goat-tools = { path = "crates/goat-tools" }
goat-skill = { path = "crates/goat-skill" }
goat-command = { path = "crates/goat-command" }
goat-command-settings = { path = "crates/goat-command-settings" }
goat-command-conversation = { path = "crates/goat-command-conversation" }
goat-command-help = { path = "crates/goat-command-help" }
goat-command-app = { path = "crates/goat-command-app" }
goat-commands = { path = "crates/goat-commands" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

clap = { version = "4", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
regex = "1"
tempfile = "3"
unicode-width = "0.2"
unicode-normalization = "0.1"
pulldown-cmark = { version = "0.12", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

rusqlite = { version = "0.40", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"
sha2 = "0.11"
base64 = "0.22"
rand = "0.10"
open = "5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
color-eyre = "0.6"
thiserror = "2"

axoupdater = "0.10"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "unwind"

[profile.dist]
inherits = "release"
lto = "fat"
