[package]
name = "goat-command-settings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
goat-command = { workspace = true }
goat-config = { workspace = true }
goat-auth = { workspace = true }
goat-search-provider = { workspace = true }
goat-search-providers = { workspace = true }

[lints]
workspace = true
