[package]
name = "goat-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
