[package]
name = "goat-provider-groq"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
goat-provider = { workspace = true }
goat-provider-openai-compat = { workspace = true }
goat-auth = { workspace = true }

[lints]
workspace = true
