[package]
name = "goat-provider-llama-cpp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
goat-provider = { workspace = true }
goat-provider-openai-compat = { workspace = true }

[lints]
workspace = true
