[package]
name = "goat-provider-openai-codex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
goat-provider = { workspace = true }
goat-provider-responses = { workspace = true }
goat-auth = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
open = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
