[package]
name = "goat-provider-openai-compat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
goat-provider = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
eventsource-stream = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
