[package]
name = "goat-provider-qwen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
goat-auth = { workspace = true }
goat-provider = { workspace = true }
goat-provider-openai-compat = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true